@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.14
-Entered-date:	2009-04-08
+Version:	9.15
+Entered-date:	2009-04-14
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.15 Fix big-endian bugs
 		v9.14 Show TRIM support in -I; use O_RDONLY when opening the device
 		v9.13 Fix --direct for arch's other than x86 (eg. arm); strip -i strings
 		v9.12 Lots of -I updates, -C updates; -B now reports current APM setting
@@ -88,7 +89,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		90K hdparm-9.14.tar.gz
+		91K hdparm-9.15.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
